Chapter 2: front-end technologies

--- a/docs/thesis/backMatter/biblio.bib
+++ b/docs/thesis/backMatter/biblio.bib
@@ -396,3 +396,158 @@
   url    = {https://blog.topgeometri.it/2022/12/24/concetti-base-sul-sistema-wgs84-del-gps/},
   year   = {2022}
 }
+@misc{leaflet2011,
+  title  = {Leaflet: An Open-Source JavaScript Library for Mobile-Friendly Interactive Maps},
+  author = {Agafonkin, Vladimir},
+  year   = {2011},
+  url    = {https://leafletjs.com/},
+  note   = {Accessed: 2025-08-20}
+}
+
+@misc{leafletdocs2023,
+  title  = {Leaflet Documentation},
+  author = {{Leaflet Contributors}},
+  year   = {2023},
+  url    = {https://leafletjs.com/reference.html},
+  note   = {Accessed: 2025-08-20}
+}
+
+@misc{leafletgithub2011,
+  title     = {Leaflet},
+  author    = {Agafonkin, Vladimir and {Leaflet Contributors}},
+  year      = {2011},
+  publisher = {GitHub},
+  url       = {https://github.com/Leaflet/Leaflet},
+  note      = {Open-source JavaScript library, Version 1.9.x}
+}
+
+@misc{vue2014,
+  title  = {Vue.js: The Progressive JavaScript Framework},
+  author = {You, Evan},
+  year   = {2014},
+  url    = {https://vuejs.org/},
+  note   = {Accessed: 2025-08-20}
+}
+
+@misc{vuedocs2024,
+  title  = {Vue.js Documentation},
+  author = {{Vue.js Contributors}},
+  year   = {2024},
+  url    = {https://vuejs.org/guide/},
+  note   = {Accessed: 2025-08-20}
+}
+
+@misc{vuegithub2014,
+  title     = {Vue.js},
+  author    = {You, Evan and {Vue.js Contributors}},
+  year      = {2014},
+  publisher = {GitHub},
+  url       = {https://github.com/vuejs/vue},
+  note      = {Progressive JavaScript framework, Version 3.x}
+}
+
+@misc{vueapi2024,
+  title  = {Vue.js API Reference},
+  author = {{Vue.js Contributors}},
+  year   = {2024},
+  url    = {https://vuejs.org/api/},
+  note   = {Official API documentation}
+}
+
+@misc{angularjs2010,
+  title     = {AngularJS: Superheroic JavaScript MVW Framework},
+  author    = {Hevery, Misko and Abrons, Adam},
+  year      = {2010},
+  publisher = {Google},
+  url       = {https://angularjs.org/},
+  note      = {Accessed: 2025-08-20}
+}
+
+@misc{react2013,
+  title     = {React: A JavaScript Library for Building User Interfaces},
+  author    = {Hunt, Pete and Walke, Jordan and {React Team}},
+  year      = {2013},
+  publisher = {Facebook},
+  url       = {https://react.dev/},
+  note      = {Accessed: 2025-08-20}
+}
+
+@misc{mdn2024spa,
+  title        = {Single-page applications},
+  author       = {{MDN Web Docs Contributors}},
+  year         = {2024},
+  organization = {Mozilla Developer Network},
+  url          = {https://developer.mozilla.org/en-US/docs/Glossary/SPA},
+  note         = {Accessed: 2025-08-20}
+}
+
+@misc{vite2021,
+  title     = {Vite: Next Generation Frontend Tooling},
+  author    = {You, Evan and {Vite Contributors}},
+  year      = {2021},
+  url       = {https://vitejs.dev/},
+  publisher = {GitHub},
+  note      = {Build tool veloce per applicazioni web moderne}
+}
+
+@misc{vuecli2018,
+  title     = {Vue CLI: Standard Tooling for Vue.js Development},
+  author    = {{Vue.js Core Team}},
+  year      = {2018},
+  url       = {https://cli.vuejs.org/},
+  publisher = {GitHub},
+  note      = {Strumento da riga di comando per scaffolding e gestione progetti Vue.js}
+}
+
+@misc{vuerouter2016,
+  title     = {Vue Router: The Official Router for Vue.js},
+  author    = {Posva, Eduardo San Martin Morote and {Vue.js Contributors}},
+  year      = {2016},
+  url       = {https://router.vuejs.org/},
+  publisher = {GitHub},
+  note      = {Libreria ufficiale per il routing in applicazioni Vue.js}
+}
+
+@misc{vuex2016,
+  title     = {Vuex: Centralized State Management for Vue.js},
+  author    = {You, Evan and {Vue.js Contributors}},
+  year      = {2016},
+  url       = {https://vuex.vuejs.org/},
+  publisher = {GitHub},
+  note      = {Libreria per la gestione centralizzata dello stato nelle applicazioni Vue.js}
+}
+
+@misc{pinia2021,
+  title     = {Pinia: The Vue Store that you will enjoy using},
+  author    = {Posva, Eduardo San Martin Morote and {Pinia Contributors}},
+  year      = {2021},
+  url       = {https://pinia.vuejs.org/},
+  publisher = {GitHub},
+  note      = {Store di nuova generazione per Vue.js, successore ufficiale di Vuex}
+}
+
+@misc{vuedevtools2016,
+  title     = {Vue DevTools: Browser extension for debugging Vue.js applications},
+  author    = {{Vue.js Core Team}},
+  year      = {2016},
+  url       = {https://devtools.vuejs.org/},
+  publisher = {GitHub},
+  note      = {Estensione browser per il debugging e l'analisi di applicazioni Vue.js}
+}
+
+@misc{agafonkin2011leaflet,
+  title  = {Leaflet: An Open-Source JavaScript Library for Mobile-Friendly Interactive Maps},
+  author = {Agafonkin, Vladimir},
+  year   = {2011},
+  month  = {May},
+  url    = {https://leafletjs.com/},
+  note   = {Initial release of Leaflet mapping library, Accessed: 2025-08-20}
+}
+
+@misc{leafletnpm2024,
+  title  = {Leaflet - npm package},
+  author = {{Leaflet Contributors}},
+  year   = {2024},
+  url    = {https://www.npmjs.com/package/leaflet},
+  note   = {Official npm package documentation, 39 KB gzipped JS specification, Accessed: 2025-08-20}
+}
