--- a/docs/thesis/tesi.tex
+++ b/docs/thesis/tesi.tex
@@ -112,7 +112,7 @@
 
 % Sections inclusion
 \input{mainMatter/01-cap.tex}
-% \input{mainMatter/02-cap.tex}
+\input{mainMatter/02-cap.tex}
 % \input{mainMatter/03-cap.tex}
 
 
