Chapter 2: back-end technologies

--- a/docs/thesis/backMatter/biblio.bib
+++ b/docs/thesis/backMatter/biblio.bib
@@ -400,16 +400,14 @@
   title  = {Leaflet: An Open-Source JavaScript Library for Mobile-Friendly Interactive Maps},
   author = {Agafonkin, Vladimir},
   year   = {2011},
-  url    = {https://leafletjs.com/},
-  note   = {Accessed: 2025-08-20}
+  url    = {https://leafletjs.com/}
 }
 
 @misc{leafletdocs2023,
   title  = {Leaflet Documentation},
   author = {{Leaflet Contributors}},
   year   = {2023},
-  url    = {https://leafletjs.com/reference.html},
-  note   = {Accessed: 2025-08-20}
+  url    = {https://leafletjs.com/reference.html}
 }
 
 @misc{leafletgithub2011,
@@ -425,16 +423,14 @@
   title  = {Vue.js: The Progressive JavaScript Framework},
   author = {You, Evan},
   year   = {2014},
-  url    = {https://vuejs.org/},
-  note   = {Accessed: 2025-08-20}
+  url    = {https://vuejs.org/}
 }
 
 @misc{vuedocs2024,
   title  = {Vue.js Documentation},
   author = {{Vue.js Contributors}},
   year   = {2024},
-  url    = {https://vuejs.org/guide/},
-  note   = {Accessed: 2025-08-20}
+  url    = {https://vuejs.org/guide/}
 }
 
 @misc{vuegithub2014,
@@ -459,8 +455,7 @@
   author    = {Hevery, Misko and Abrons, Adam},
   year      = {2010},
   publisher = {Google},
-  url       = {https://angularjs.org/},
-  note      = {Accessed: 2025-08-20}
+  url       = {https://angularjs.org/}
 }
 
 @misc{react2013,
@@ -468,8 +463,7 @@
   author    = {Hunt, Pete and Walke, Jordan and {React Team}},
   year      = {2013},
   publisher = {Facebook},
-  url       = {https://react.dev/},
-  note      = {Accessed: 2025-08-20}
+  url       = {https://react.dev/}
 }
 
 @misc{mdn2024spa,
@@ -477,8 +471,7 @@
   author       = {{MDN Web Docs Contributors}},
   year         = {2024},
   organization = {Mozilla Developer Network},
-  url          = {https://developer.mozilla.org/en-US/docs/Glossary/SPA},
-  note         = {Accessed: 2025-08-20}
+  url          = {https://developer.mozilla.org/en-US/docs/Glossary/SPA}
 }
 
 @misc{vite2021,
@@ -540,14 +533,105 @@
   author = {Agafonkin, Vladimir},
   year   = {2011},
   month  = {May},
-  url    = {https://leafletjs.com/},
-  note   = {Initial release of Leaflet mapping library, Accessed: 2025-08-20}
+  url    = {https://leafletjs.com/}
 }
 
 @misc{leafletnpm2024,
   title  = {Leaflet - npm package},
   author = {{Leaflet Contributors}},
   year   = {2024},
-  url    = {https://www.npmjs.com/package/leaflet},
-  note   = {Official npm package documentation, 39 KB gzipped JS specification, Accessed: 2025-08-20}
+  url    = {https://www.npmjs.com/package/leaflet}
+}
+
+@misc{nodejs_foundation_2023,
+  title  = {Node.js Official Documentation},
+  author = {{Node.js Foundation}},
+  year   = {2023},
+  url    = {https://nodejs.org/en/docs/}
+}
+@misc{nodejs_docs_2023,
+  title  = {Node.js Event Loop, Timers, and process.nextTick()},
+  author = {{Node.js Documentation Team}},
+  year   = {2023},
+  url    = {https://nodejs.org/en/docs/guides/event-loop-timers-and-nexttick/}
+}
+
+@misc{capan_2013_nodejs,
+  title        = {Why the Hell Would I Use Node.js? A Case-by-case Tutorial},
+  author       = {Capan, Tomislav},
+  year         = {2013},
+  month        = {August},
+  url          = {https://www.toptal.com/javascript/why-the-hell-would-i-use-node-js},
+  organization = {Toptal}
+}
+
+@misc{express_js,
+  title  = {Express.js: Fast, unopinionated, minimalist web framework for Node.js},
+  author = {{Express.js Team}},
+  year   = {2025},
+  url    = {https://expressjs.com/}
+}
+
+@misc{socket_io,
+  title  = {Socket.IO: Bidirectional and low-latency communication for every platform},
+  author = {{Socket.IO Team}},
+  year   = {2025},
+  url    = {https://socket.io/}
+}
+
+@misc{mongodb,
+  title  = {MongoDB: The Developer Data Platform},
+  author = {{MongoDB Inc.}},
+  year   = {2025},
+  url    = {https://www.mongodb.com/}
+}
+
+@misc{redis,
+  title  = {Redis: The open source, in-memory data store},
+  author = {{Redis Ltd.}},
+  year   = {2025},
+  url    = {https://redis.io/}
+}
+
+
+Bibliografia (file python_refs.bib)
+
+@book{van_rossum_1995,
+  title     = {Python Reference Manual},
+  author    = {van Rossum, Guido},
+  year      = {1995},
+  publisher = {CWI},
+  address   = {Amsterdam, Netherlands}
+}
+
+@misc{peters_2004,
+  title  = {PEP 20 -- The Zen of Python},
+  author = {Peters, Tim},
+  year   = {2004},
+  url    = {https://www.python.org/dev/peps/pep-0020/},
+  note   = {Accessed: 2025-08-21}
+}
+
+@misc{pypi_2023,
+  title  = {Python Package Index},
+  author = {{Python Software Foundation}},
+  year   = {2023},
+  url    = {https://pypi.org/},
+  note   = {Accessed: 2025-08-21}
+}
+
+@misc{django_2023,
+  title  = {Django: The Web framework for perfectionists with deadlines},
+  author = {{Django Software Foundation}},
+  year   = {2023},
+  url    = {https://www.djangoproject.com/},
+  note   = {Accessed: 2025-08-21}
+}
+
+@misc{flask_2023,
+  title  = {Flask: A lightweight WSGI web application framework},
+  author = {Ronacher, Armin},
+  year   = {2023},
+  url    = {https://flask.palletsprojects.com/},
+  note   = {Accessed: 2025-08-21}
 }
