--- a/docs/thesis/backMatter/bibliografia.tex
+++ b/docs/thesis/backMatter/bibliografia.tex
@@ -11,4 +11,4 @@
 \addcontentsline{toc}{chapter}{Bibliografia}
 
 \bibliography{backMatter/biblio}{}
-\bibliographystyle{plainnat}
+\bibliographystyle{unsrt}
